syntax = "proto3";
package monitor.proto;

message NetInfo {
    string name = 1;
    float send_rate = 2;  // 发送速率
    float rcv_rate = 3;   // 接收速率
    float send_packets_rate = 4;  // 发送包速率（pps）
    float rcv_packets_rate = 5;   // 接收包速率
}